Added package ifthen

--- a/thesis.tex
+++ b/thesis.tex
@@ -132,6 +132,10 @@
 % =============================================================================
 \chapter{Introduction}\label{sec:introduction}
   \input{chapters/chapter1}
+
+  \newboolean{test}
+  \setboolean{test}{false}
+  \ifthenelse{\boolean{test}}{true}{false}
   \cleardoublepage
 \chapter{Fundamentals}\label{sec:fundamentals}
   \input{chapters/chapter2}
