--- a/includes/definitions.tex
+++ b/includes/definitions.tex
@@ -84,6 +84,12 @@
 % =============================================================================
 % Variable declarations
 % =============================================================================
+
+% true = english
+% false = german
+\newboolean{english}
+\setboolean{english}{false}
+
 \def\authorsurname{TODO: SURNAME}
 \def\authorfirstname{TODO: FIRST NAME}
 \def\title{TODO: TITLE}
