set one half spacing for text.

--- a/thesis.tex
+++ b/thesis.tex
@@ -127,9 +127,11 @@
 % =============================================================================
 \pagenumbering{arabic}
 \setcounter{page}{1}
+
 % =============================================================================
 % Chapters
 % =============================================================================
+\begin{onehalfspace}
 \chapter{Introduction}\label{sec:introduction}
   \input{chapters/chapter1}
   \cleardoublepage
@@ -148,6 +150,7 @@
 \chapter{Conclusion and Future Work}\label{sec:conclusionandfuturework}
   \input{chapters/chapter6}
   \cleardoublepage
+\end{onehalfspace}
 % =============================================================================
 % Bibliography
 % =============================================================================
