--- a/thesis.tex
+++ b/thesis.tex
@@ -21,66 +21,7 @@
 % =============================================================================
 % Titlepage
 % =============================================================================
-\newgeometry{top=2.7cm}
-\begin{titlepage}
-    \begin{adjustwidth}{-1cm}{-1cm}
-	\begin{minipage}{0.5\textwidth}
-		\includegraphics[width=\linewidth]{figures/logo.pdf}
-	\end{minipage}
-    \hfill
-	\begin{minipage}{0.3\textwidth}
-		{\bfseries\textsf{\textcolor{universityred}{Faculty of\\Science}}\\[0.3cm]}
-		{\bfseries\textsf{\textcolor{universityred}{Embedded Systems}}}
-	\end{minipage}%
-	\end{adjustwidth}
-	\vspace{3cm}
-	\begin{center}
-		{\huge \thesiskind\\[2cm]}
-		{\Large\bfseries \title\\[1.5cm]}
-		{\large Submitted by: \authorfirstname\ \authorsurname}\\[0.5cm]
-		\thesisend
-	\end{center}
-	\vfill
-	\begin{minipage}{0.48\textwidth}
-		\centering
-		{\small\bfseries First Supervisor}\\[0.3cm]
-		{\large Prof. Dr. Oliver Bringmann}\\[2mm]
-		{\footnotesize Faculty of Science\\
-		Department of Computer Science\\[1.5mm]
-		Embedded Systems\\
-		University of Tübingen}
-	\end{minipage}
-	\hfill
-	\begin{minipage}{0.48\textwidth}
-		\centering
-		{\small\bfseries Second Supervisor}\\[0.3cm]
-		{\large TODO: NAME}\\[2mm]
-		{\footnotesize Faculty of Science\\
-		Department of Computer Science\\[1.5mm]
-		TODO: CHAIR\\
-		University of Tübingen}
-	\end{minipage}%
-	\vspace{1.5cm}
-	\begin{minipage}{0.48\textwidth}
-		\centering
-		{\small\bfseries Graduate Advisor}\\[0.3cm]
-		{\large TODO: NAME}\\[2mm]
-		{\footnotesize Faculty of Science\\
-			Department of Computer Science\\[1.5mm]
-			Embedded Systems\\
-			University of Tübingen}
-	\end{minipage}
-	\hfill
-	\begin{minipage}{0.48\textwidth}
-		\centering
-		{\small\bfseries Graduate Advisor}\\[0.3cm]
-		{\large TODO: NAME}\\[2mm]
-		{\footnotesize Faculty of Science\\
-			Department of Computer Science\\[1.5mm]
-			Embedded Systems\\
-			University of Tübingen}
-	\end{minipage}
-\end{titlepage}
+\input{./includes/titlepage}
 % =============================================================================
 % 2nd page: Titlepage
 % =============================================================================
