Abstracts are now based on the language selection.

--- a/includes/abstract.tex
+++ b/includes/abstract.tex
@@ -5,4 +5,11 @@
 % =============================================================================
 % CONTENT   : Include for abstract (english)
 % =============================================================================
-English abstract\ldots
+1. Warum ist diese Arbeit wichtig?
+
+\noindent 2. Welches Problem wird gelöst?
+
+\noindent 3. Welcher Ansatz/Welche Lösung wird verwendet?
+
+\noindent 4. Welche Ergebnisse wurden erzielt?
+
