--- a/includes/abstractger.tex
+++ b/includes/abstractger.tex
@@ -5,4 +5,4 @@
 % =============================================================================
 % CONTENT   : Include for abstract (german)
 % =============================================================================
-German abstract\ldots
+Obwohl diese Arbeit in Englisch verfasst wird muss es einen deutschen Abstract/Kurzfassung geben. (Übersetzung des englischen Abstracts)
