Added acknowledgement section.

--- a/includes/definitions.tex
+++ b/includes/definitions.tex
@@ -8,7 +8,7 @@
 % true = english
 % false = german
 \newboolean{english}
-\setboolean{english}{false}
+\setboolean{english}{true}
 
 \def\authorsurname{TODO: SURNAME}
 \def\authorfirstname{TODO: FIRST NAME}
