Added Introduction text.

--- a/includes/packages.tex
+++ b/includes/packages.tex
@@ -3,7 +3,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[autostyle]{csquotes}
-\usepackage[ngerman]{babel}
+\usepackage[ngerman,english]{babel}
 \usepackage{mathtools}
 \usepackage{amsmath}
 \usepackage{amssymb}
