Added Pyhton code example.

--- a/includes/definitions.tex
+++ b/includes/definitions.tex
@@ -67,42 +67,78 @@
 \newtheorem*{note}{Bemerkung}
 % === xcolor ===
 \definecolor{universityred}{RGB}{165,30,55}
-\definecolor{customblue}{RGB}{54,75,154}
-\definecolor{customorange}{RGB}{246,126,75}
-\definecolor{customred}{RGB}{165,0,38}
-\definecolor{customneutral}{RGB}{254,218,139}
+
 % === Listings ===
-\renewcommand{\lstlistingname}{Codeauszug}
-\renewcommand{\lstlistlistingname}{Codeauszugsverzeichnis}
-\lstset{literate=%
-    {Ö}{{\"O}}1
-    {Ä}{{\"A}}1
-    {Ü}{{\"U}}1
-    {ß}{{\ss}}1
-    {ü}{{\"u}}1
-    {ä}{{\"a}}1
-    {ö}{{\"o}}1
-    {~}{{\textasciitilde}}1
+
+\ifthenelse{\boolean{english}}
+{}
+{
+    \renewcommand{\lstlistingname}{Quellcodeauszug}
+    \renewcommand{\lstlistlistingname}{Quellcodeauszugsverzeichnis}
 }
-\lstdefinestyle{customc}{
-    framextopmargin=1pt,
-    framexbottommargin=1pt, 
-    frame=tb, 
-    framerule=0.7pt,
-    belowcaptionskip=1\baselineskip,
-    breaklines=true,
-    language=C,
-    tabsize=2,
-    showstringspaces=false,
-    basicstyle=\tiny\ttfamily,
-    %backgroundcolor=\color{customlightgray},
-    keywordstyle=\bfseries\color{customlightred},
-    commentstyle=\color{customblue},
-    identifierstyle=\color{customgreen},
-    stringstyle=\color{orange},
-    moredelim=[s][\color{ForestGreen}\sffamily]{/**}{*/},
-    moredelim=[l][\color{customblue}]{\#pragma}
+
+% code colors
+\definecolor{darkred}{rgb}{0.6,0.0,0.0}
+\definecolor{darkgreen}{rgb}{0,0.50,0}
+\definecolor{lightblue}{rgb}{0.0,0.42,0.91}
+\definecolor{orange}{rgb}{0.99,0.48,0.13}
+\definecolor{grass}{rgb}{0.18,0.80,0.18}
+\definecolor{pink}{rgb}{0.97,0.15,0.45}
+
+% General Setting of listings
+\lstset{
+  aboveskip=1em,
+  breaklines=true,
+  captionpos=b,
+  escapeinside={\%*}{*)},
+  frame=single,
+  numbers=left,
+  numbersep=15pt,
+  numberstyle=\tiny,
+  literate=%
+  {Ö}{{\"O}}1
+  {Ä}{{\"A}}1
+  {Ü}{{\"U}}1
+  {ß}{{\ss}}1
+  {ü}{{\"u}}1
+  {ä}{{\"a}}1
+  {ö}{{\"o}}1
+  {~}{{\textasciitilde}}1
 }
+% 0. Basic Color Theme
+\lstdefinestyle{colored}{ %
+  basicstyle=\ttfamily,
+  backgroundcolor=\color{white},
+  commentstyle=\color{green}\itshape,
+  keywordstyle=\color{blue}\bfseries\itshape,
+  stringstyle=\color{red},
+}
+% 1. General Python Keywords List
+\lstdefinelanguage{PythonPlus}[]{Python}{
+  morekeywords=[1]{,as,assert,nonlocal,with,yield,self,True,False,None,} % Python builtin
+  morekeywords=[2]{,__init__,__add__,__mul__,__div__,__sub__,__call__,__getitem__,__setitem__,__eq__,__ne__,__nonzero__,__rmul__,__radd__,__repr__,__str__,__get__,__truediv__,__pow__,__name__,__future__,__all__,}, % magic methods
+  morekeywords=[3]{,object,type,isinstance,copy,deepcopy,zip,enumerate,reversed,list,set,len,dict,tuple,range,xrange,append,execfile,real,imag,reduce,str,repr,}, % common functions
+  morekeywords=[4]{,Exception,NameError,IndexError,SyntaxError,TypeError,ValueError,OverflowError,ZeroDivisionError,}, % errors
+  morekeywords=[5]{,ode,fsolve,sqrt,exp,sin,cos,arctan,arctan2,arccos,pi, array,norm,solve,dot,arange,isscalar,max,sum,flatten,shape,reshape,find,any,all,abs,plot,linspace,legend,quad,polyval,polyfit,hstack,concatenate,vstack,column_stack,empty,zeros,ones,rand,vander,grid,pcolor,eig,eigs,eigvals,svd,qr,tan,det,logspace,roll,min,mean,cumsum,cumprod,diff,vectorize,lstsq,cla,eye,xlabel,ylabel,squeeze,}, % numpy / math
+}
+% 2. New Language based on Python
+\lstdefinelanguage{PyBrIM}[]{PythonPlus}{
+  emph={d,E,a,Fc28,Fy,Fu,D,des,supplier,Material,Rectangle,PyElmt},
+}
+% 3. Extended theme
+\lstdefinestyle{colorEX}{
+  basicstyle=\small\ttfamily,
+  backgroundcolor=\color{white},
+  commentstyle=\color{darkgreen}\slshape,
+  keywordstyle=\color{blue}\bfseries\itshape,
+  keywordstyle=[2]\color{blue}\bfseries,
+  keywordstyle=[3]\color{grass},
+  keywordstyle=[4]\color{red},
+  keywordstyle=[5]\color{orange},
+  stringstyle=\color{darkred},
+  emphstyle=\color{pink}\underbar,
+}
+
 % =============================================================================
 % siunitx
 % =============================================================================
