--- a/thesis.tex
+++ b/thesis.tex
@@ -45,6 +45,7 @@
 % =============================================================================
 % Abstract
 % =============================================================================
+\begin{onehalfspace}
 \ifthenelse{\boolean{english}}{
 	\chapter*{Kurzfassung}
 	\thispagestyle{empty}
@@ -62,16 +63,19 @@
 	\input{./includes/abstract}
 	\cleardoublepage
 }
+\end{onehalfspace}
 
 % =============================================================================
 % Acknowledgements 
 % =============================================================================
+\begin{onehalfspace}
 \ifthenelse{\boolean{english}}
 	{\chapter*{Acknowledgements}}
 	{\chapter*{Danksagung}}
 \thispagestyle{empty}
 \input{./includes/acknowledgements}
 \cleardoublepage
+\end{onehalfspace}
 
 % =============================================================================
 % Table of contents
