Add name and title

--- a/includes/definitions.tex
+++ b/includes/definitions.tex
@@ -10,12 +10,12 @@
 \newboolean{english}
 \setboolean{english}{true}
 
-\def\authorsurname{TODO: SURNAME}
-\def\authorfirstname{TODO: FIRST NAME}
-\def\title{TODO: TITLE}
+\def\authorsurname{Schammo}
+\def\authorfirstname{Tom}
+\def\title{Implementierung und Analyse verschiedener Eingabequellen auf der Ultratrailarchitektur}
 \ifthenelse{\boolean{english}}
-    {\def\thesiskind{Master's Thesis Computer Science}}
-    {\def\thesiskind{Masterarbeit Informatik}}
+    {\def\thesiskind{Bachelor's Thesis Computer Science}}
+    {\def\thesiskind{Bachelorarbeit Informatik}}
 \def\thesisstart{TODO: START DATE}
 \def\thesisend{TODO: END DATE}
 % =============================================================================
