--- a/includes/references.bib
+++ b/includes/references.bib
@@ -1,20 +1,108 @@
 % =============================================================================
 % FILE NAME : bibliography.bib
 % DEPARTMENT: University of Tuebingen
-% AUTOR     : Paul Palomero Bernardo
+% AUTOR     : Tom Schammo
 % =============================================================================
 % CONTENT   : Biliography file
 % =============================================================================
-@book{goodfellow_deep_2016,
-	title = {Deep {Learning}},
-	publisher = {MIT Press},
-	author = {Goodfellow, Ian and Bengio, Yoshua and Courville, Aaron},
-	year = {2016}
-}
-@online{webpage,
+@online{rustlang,
   %author = {Add author if known},
-  title = {Lehrstuhl Eingebettete Systeme},
+  title = {Rust},
   year = 2022,
-  url = {https://www.embedded.uni-tuebingen.de/home/},
-  urldate = {2022-03-30}
+  url = {https://www.rust-lang.org/},
+  urldate = {2022-11-30} }
+@online{riscv,
+  %author = {Add author if known},
+  title = {RISC-V},
+  year = 2022,
+  url = {https://riscv.org/},
+  urldate = {2022-12-06}
+}
+@book{riscv_spec,
+	title = {The RISC-V Instruction Set Manual, Volume I: User-Level ISA, Document
+Version 20191214-draf},
+	author = {Andrew Waterman and Krste Asanovi´c, RISC-V International},
+	year = {2019}
+}
+@online{memory_safety,
+  %author = {Add author if known},
+  title = {Memory Safety},
+  year = 2019,
+  url = {https://hacks.mozilla.org/2019/01/fearless-security-memory-safety/},
+  urldate = {2022-12-09}
+}
+@online{rust_concurrency,
+    title = {Concurrency in Rust},
+    year = 2022,
+    url = {https://doc.rust-lang.org/book/ch16-00-concurrency.html},
+    urldate = {2022-12-14}
+}
+@online{rust_ownership,
+    title = {Rusts ownership model},
+    year = 2022,
+    url = {https://doc.rust-lang.org/book/ch04-00-understanding-ownership.html},
+    urldate = {2022-12-14}
+}
+@online{rust_borrow,
+    title = {References and Borrowing},
+    year = 2022,
+    url = {https://doc.rust-lang.org/book/ch04-02-references-and-borrowing.html},
+    urldate = {2022-12-14}
+}
+@online{pdm_texas,
+    title = {Understanding PDM Digital Audio},
+    year = 2022,
+    url = {https://users.ece.utexas.edu/~bevans/courses/rtdsp/lectures/10_Data_Conversion/AP_Understanding_PDM_Digital_Audio.pdf},
+    urldate = {2022-12-14}
+}
+@online{pulpissimo,
+    title = {Pulpissimo GitHub},
+    year = 2022,
+    url = {https://github.com/pulp-platform/pulpissimo},
+    urldate = {2022-12-23}
+}
+@online{alexa,
+    title = {Amazon Alexa},
+    year = 2022,
+    url = {https://developer.amazon.com/en-GB/alexa},
+    urldate = {2022-12-25}
+}
+@online{roomba,
+    title = {Roomba},
+    year = 2022,
+    url = {https://www.irobot.com/en_US/roomba.html},
+    urldate = {2022-12-25}
+}
+@online{autopilot,
+    title = {Tesla Autopilot},
+    year = 2022,
+    url = {https://www.tesla.com/autopilot},
+    urldate = {2022-12-25}
+}
+% @book{ultratrail,
+% 	title = {UltraTrail: A Configurable Ultra-Low Power TC-ResNet AI Accelerator for Efficient Keyword Spotting},
+% 	author = {Paul Palomero Bernardo, Christoph Gerum, Adrian Frischknecht, Konstantin Lübeck, and Oliver Bringmann},
+% 	year = {2020}
+
+% }
+@ARTICLE{ultratrail,  author={Bernardo, Paul Palomero and Gerum, Christoph and Frischknecht, Adrian and Lübeck, Konstantin and Bringmann, Oliver},  journal={IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems},   title={UltraTrail: A Configurable Ultralow-Power TC-ResNet AI Accelerator for Efficient Keyword Spotting},   year={2020},  volume={39},  number={11},  pages={4240-4251},  doi={10.1109/TCAD.2020.3012320}}
+
+@online{i2s,
+    title = {I2S},
+    year = 2022,
+    url = {https://web.archive.org/web/20070102004400/http://www.nxp.com/acrobat_download/various/I2SBUS.pdf},
+    urldate = {2022-12-25}
+}
+
+@online{pdm_utexas,
+    title = {Understanding PDM Digital Audio},
+    year = 2023,
+    url = {https://users.ece.utexas.edu/~bevans/courses/rtdsp/lectures/10_Data_Conversion/AP_Understanding_PDM_Digital_Audio.pdf},
+    urldate = {2023-01-03}
+}
+@online{java_garbage_collector,
+    title = {Java Garbage Collection Basics},
+    year = 2023,
+    url = {https://www.oracle.com/webfolder/technetwork/tutorials/obe/java/gc01/index.html},
+    urldate = {2023-01-09}
 }
