--- a/thesis.tex
+++ b/thesis.tex
@@ -165,6 +165,26 @@
 \begin{tabbing}
 \textbf{FACTOTUM}\hspace{1cm}\=Schrott\kill
 \textbf{CPU}\>Central Processing Unit
+\\
+\textbf{GPU}\>Graphics Processing Unit
+\\
+\textbf{PDM}\>Pulse Density Modulation
+\\
+\textbf{PCM}\>Pulse Code Modulation
+\\
+\textbf{I2S}\>Inter-IC Sound
+\\
+\textbf{ISA}\>Instruction Set Architecture
+\\
+\textbf{ML}\>Machine Learning
+\\
+\textbf{AI}\>Artificial Intelligence
+\\
+\textbf{IoT}\>Internet of Things
+\\
+\textbf{MSB}\>Most Significant Bit
+\\
+\textbf{LSB}\>Least Significant Bit
 \end{tabbing}
 \cleardoublepage
 
