--- a/includes/references.bib
+++ b/includes/references.bib
@@ -11,6 +11,18 @@
   year = 2022,
   url = {https://www.rust-lang.org/},
   urldate = {2022-11-30} }
+@online{rust_releases,
+  %author = {Add author if known},
+  title = {Rust Releases},
+  year = 2023,
+  url = {https://github.com/rust-lang/rust/blob/master/RELEASES.md},
+  urldate = {2023-01-09} }
+@online{rust_popularity,
+  %author = {Add author if known},
+  title = {Stack Overflow programming language ranking 2020},
+  year = 2023,
+  url = {https://insights.stackoverflow.com/survey/2020#technology-most-loved-dreaded-and-wanted-languages-loved},
+  urldate = {2023-01-09} }
 @online{riscv,
   %author = {Add author if known},
   title = {RISC-V},
