Add `embedded rust` part

--- a/includes/references.bib
+++ b/includes/references.bib
@@ -61,6 +61,30 @@ Version 20191214-draf},
     url = {https://doc.rust-lang.org/book/ch04-02-references-and-borrowing.html},
     urldate = {2023-01-15}
 }
+@online{rust_return,
+    title = {Functions that return},
+    year = 2023,
+    url = {https://doc.rust-lang.org/book/ch03-03-how-functions-work.html#functions-with-return-values},
+    urldate = {2023-01-14}
+}
+@online{rust_never_type,
+    title = {The 'never' return type},
+    year = 2023,
+    url = {https://doc.rust-lang.org/book/ch19-04-advanced-types.html#the-never-type-that-never-returns},
+    urldate = {2023-01-14}
+}
+@online{rust_no_std,
+    title = {The absence of the standard library in embedded Rust},
+    year = 2023,
+    url = {https://docs.rust-embedded.org/book/intro/no-std.html},
+    urldate = {2023-01-14}
+}
+@online{riscv_rt_entry,
+    title = {riscv\_rt::entry},
+    year = 2023,
+    url = {https://docs.rs/riscv-rt/0.10.0/riscv_rt/attr.entry.html},
+    urldate = {2023-01-14}
+}
 @online{pdm_texas,
     title = {Understanding PDM Digital Audio},
     year = 2022,
