--- a/includes/references.bib
+++ b/includes/references.bib
@@ -136,9 +136,8 @@ Version 20191214-draf},
     url = {https://www.oracle.com/webfolder/technetwork/tutorials/obe/java/gc01/index.html},
     urldate = {2023-01-09}
 }
-@book{raphael,
-    title = {Rust auf der RISCV Plattform PULPissimo – Entwicklung und
-Evaluation},
-    author = {Raphael Vogelgsang}
-    year = 2022,
+@book{rust_pulp,
+    title = {Rust auf der RISCV Plattform PULPissimo – Entwicklung und Evaluation},
+    author = {Raphael Vogelgsang},
+    year = 2022
 }
