--- a/includes/packages.tex
+++ b/includes/packages.tex
@@ -15,7 +15,7 @@
 \usepackage{verbatim}
 \usepackage[margin=10pt,font=small,labelfont=bf]{caption}
 \usepackage{subcaption}
-\usepackage{listings, listings-rust}
+\usepackage{listings, includes/listings-rust}
 \usepackage{algorithm}
 \usepackage[noend]{algpseudocode}
 \usepackage{paralist}
