Add `OS` and MCU into abbreviations

--- a/thesis.tex
+++ b/thesis.tex
@@ -185,6 +185,10 @@
 \textbf{MSB}\>Most Significant Bit
 \\
 \textbf{LSB}\>Least Significant Bit
+\\
+\textbf{OS}\>Operating System
+\\
+\textbf{MCU}\>Micro-Controller
 \end{tabbing}
 \cleardoublepage
 
