Expand the RISC-V section
Expand the RISC-V section by:

- Explaining ISAs
- Providing context by mentioning ARM and explaining the differences
  between the two

--- a/includes/references.bib
+++ b/includes/references.bib
@@ -36,6 +36,48 @@ Version 20191214-draf},
 	author = {Andrew Waterman and Krste Asanovi´c, RISC-V International},
 	year = {2019}
 }
+@online{
+    isa,
+    title = {What Is an Instruction Set Architecture?},
+    year = 2023,
+    url = {https://www.arm.com/glossary/isa}
+    urldate = {2023-01-20}
+}
+@online{
+    arm_architecture,
+    title = {The ARM architecture},
+    year = 2023,
+    url = {https://www.arm.com/architecture}
+    urldate = {2023-01-20}
+}
+@online{
+    arm,
+    title = {ARM},
+    year = 2023,
+    url = {https://www.arm.com/}
+    urldate = {2023-01-20}
+}
+@online{
+    arm_sale,
+    title = {NVIDIA to Acquire Arm for \$40 Billion},
+    year = 2020,
+    url = {https://nvidianews.nvidia.com/news/nvidia-to-acquire-arm-for-40-billion-creating-worlds-premier-computing-company-for-the-age-of-ai}
+    urldate = {2023-01-20}
+}
+@online{
+    arm_sale_speculation,
+    title = {Nvidia's ownership of ARM could drive customers to RISC-V},
+    year = 2021,
+    url = {https://www.zdnet.com/article/nvidias-ownership-of-arm-could-drive-customers-to-risc-v-other-alternatives-if-not-careful-says-xilinx-ceo/}
+    urldate = {2023-01-20}
+}
+@online{
+    arm_sale_called_off,
+    title = {Nvidia calls off its efforts to acquire Arm},
+    year = 2022,
+    url = {https://techcrunch.com/2022/02/07/nvidia-calls-off-its-efforts-to-acquire-arm/?guccounter=1&guce_referrer=aHR0cHM6Ly9zZWFyY2guYnJhdmUuY29tLw&guce_referrer_sig=AQAAACrqqiFNB633Fpdf2nFTFnDw8Mc1-ozi_3gur01zxkwlxIMu12Ys1hYpWqOlT3nLe--ugw8RgutUNTOU3d-Kd1A9pvbDfUI9O5du56yDr6wBnVmfJHanhGxNmA0E-LE_AtcxqO9CqtH0QXdFwcorwy7wAoGhnr9_TXa90Rm1sRNI}
+    urldate = {2023-01-20}
+}
 @online{memory_safety,
   %author = {Add author if known},
   title = {Memory Safety},
