--- a/thesis.tex
+++ b/thesis.tex
@@ -168,6 +168,12 @@
 \\
 \textbf{GPU}\>Graphics Processing Unit
 \\
+\textbf{CISC}\>Complex Instruction Set Computer
+\\
+\textbf{RISC}\>Reduced Instruction Set Computer
+\\
+\textbf{SoC}\>System-on-a-Chip
+\\
 \textbf{PDM}\>Pulse Density Modulation
 \\
 \textbf{PCM}\>Pulse Code Modulation
