Expand explanation on program start

--- a/thesis.tex
+++ b/thesis.tex
@@ -168,6 +168,10 @@
 \\
 \textbf{GPU}\>Graphics Processing Unit
 \\
+\textbf{RAM}\>Random Access Memory
+\\
+\textbf{MMU}\>Memory Management Unit
+\\
 \textbf{CISC}\>Complex Instruction Set Computer
 \\
 \textbf{RISC}\>Reduced Instruction Set Computer
