--- a/includes/references.bib
+++ b/includes/references.bib
@@ -183,3 +183,9 @@ Version 20191214-draf},
     author = {Raphael Vogelgsang},
     year = 2022
 }
+@online{
+    before_main,
+    year = 2022,
+    url = {https://embeddedartistry.com/blog/2019/04/08/a-general-overview-of-what-happens-before-main/}
+    urldate = {2023-01-21}
+}
