Set start and end date of the thesis

--- a/includes/definitions.tex
+++ b/includes/definitions.tex
@@ -16,8 +16,8 @@
 \ifthenelse{\boolean{english}}
     {\def\thesiskind{Bachelor's Thesis Computer Science}}
     {\def\thesiskind{Bachelorarbeit Informatik}}
-\def\thesisstart{TODO: START DATE}
-\def\thesisend{TODO: END DATE}
+\def\thesisstart{16.11.2023}
+\def\thesisend{16.06.2023}
 % =============================================================================
 % Page margin, header setup, and typography
 % =============================================================================
