--- a/includes/references.bib
+++ b/includes/references.bib
@@ -186,6 +186,6 @@ Version 20191214-draf},
 @online{
     before_main,
     year = 2022,
-    url = {https://embeddedartistry.com/blog/2019/04/08/a-general-overview-of-what-happens-before-main/}
+    url = {https://embeddedartistry.com/blog/2019/04/08/a-general-overview-of-what-happens-before-main/},
     urldate = {2023-01-21}
 }
