--- a/includes/references.bib
+++ b/includes/references.bib
@@ -185,6 +185,7 @@ Version 20191214-draf},
 }
 @online{
     before_main,
+    title = {What happens before a C programs main function?},
     year = 2022,
     url = {https://embeddedartistry.com/blog/2019/04/08/a-general-overview-of-what-happens-before-main/},
     urldate = {2023-01-21}
