Add draft for `state of the art` chapter
Finished sub chapters:

- Rust on the PULPissimo
- Previous work on the PULPissimo
- Keyword spotting in the industry
    - Voice Assistants
        - Mycroft

Work in progress:

- UltraTrail

--- a/includes/references.bib
+++ b/includes/references.bib
@@ -145,6 +145,104 @@ Version 20191214-draf},
     url = {https://developer.amazon.com/en-GB/alexa},
     urldate = {2022-12-25}
 }
+@online{
+    siri,
+    title = {Siri by Apple},
+    year = 2023,
+    url = {https://www.apple.com/de/siri/},
+    urldate = {2023-01-25}
+}
+@online{
+    mycroft,
+    title = {Mycroft},
+    year = 2023,
+    url = {https://mycroft.ai/},
+    urldate = {2023-01-25}
+}
+@online{
+    mycroft_gh,
+    title = {Mycroft AI on GitHub},
+    year = 2023,
+    url = {https://github.com/MycroftAI},
+    urldate = {2023-01-25}
+}
+@online{
+    mycroft_skills,
+    title = {Mycroft Skills},
+    year = 2023,
+    url = {https://market.mycroft.ai/skills},
+    urldate = {2023-01-25}
+}
+@online{
+    mycroft_precise,
+    title = {Mycroft Precise on GitHub},
+    year = 2023,
+    url = {https://github.com/MycroftAI/mycroft-precise},
+    urldate = {2023-01-25}
+}
+@online{
+    mycroft_mimic3,
+    title = {Mycroft Mimic3 on GitHub},
+    year = 2023,
+    url = {https://github.com/MycroftAI/mimic3},
+    urldate = {2023-01-25}
+}
+@online{
+    mycroft_adapt,
+    title = {Mycroft Adapt on GitHub},
+    year = 2023,
+    url = {https://github.com/MycroftAI/adapt},
+    urldate = {2023-01-25}
+}
+@online{
+    mycroft_padatious,
+    title = {Mycroft Padatious on GitHub},
+    year = 2023,
+    url = {https://github.com/MycroftAI/padatious},
+    urldate = {2023-01-25}
+}
+@online{
+    sonos_snips,
+    title = {Acquisition of Snips by Sonos},
+    year = 2019,
+    url = {https://investors.sonos.com/news-and-events/investor-news/latest-news/2019/Sonos-Announces-Acquisition-of-Snips/default.aspx},
+    urldate = {2023-01-25}
+}
+@online{
+    snips,
+    title = {snips.ai website},
+    year = 2019,
+    url = {https://web.archive.org/web/20191022194740/https://snips.ai/},
+    urldate = {2023-01-25}
+}
+@online{
+    snips_flow,
+    title = {snips.ai 'flow'},
+    year = 2019,
+    url = {https://web.archive.org/web/20190906051753/https://snips.ai/products/flow/},
+    urldate = {2023-01-25}
+}
+@online{
+    rpi3,
+    title = {Raspberry Pi 3B},
+    year = 2023,
+    url = {https://www.raspberrypi.com/products/raspberry-pi-3-model-b/},
+    urldate = {2023-01-25}
+}
+@online{
+    jetson_tx2,
+    title = {NVIDIA Jetson TX2},
+    year = 2023,
+    url = {https://developer.nvidia.com/embedded/jetson-tx2},
+    urldate = {2023-01-25}
+}
+@online{
+    snapdragon_410,
+    title = {Qualcomm Snapdragon 410},
+    year = 2023,
+    url = {https://www.qualcomm.com/products/application/smartphones/snapdragon-4-series-mobile-platforms/snapdragon-processors-410},
+    urldate = {2023-01-25}
+}
 @online{roomba,
     title = {Roomba},
     year = 2022,
@@ -182,6 +280,13 @@ Version 20191214-draf},
     title = {Rust auf der RISCV Plattform PULPissimo – Entwicklung und Evaluation},
     author = {Raphael Vogelgsang},
     year = 2022
+}
+@online{
+    svd2rust,
+    title = {svd2rust crate},
+    year = 2023,
+    url = {https://docs.rs/svd2rust/latest/svd2rust/},
+    urldate = {2023-01-23 }
 }
 @online{
     before_main,
