--- a/thesis.tex
+++ b/thesis.tex
@@ -190,6 +190,16 @@
 \\
 \textbf{AI}\>Artificial Intelligence
 \\
+\textbf{TCN}\>Temporal Convolutional Network
+\\
+\textbf{CNN}\>Convolutional Neural Network
+\\
+\textbf{LSTM}\>Long Short-Term Memory
+\\
+\textbf{RNN}\>Recurrent Neural Network
+\\
+\textbf{GRU}\>Grated Recurrent Unit
+\\
 \textbf{IoT}\>Internet of Things
 \\
 \textbf{MSB}\>Most Significant Bit
@@ -199,6 +209,14 @@
 \textbf{OS}\>Operating System
 \\
 \textbf{MCU}\>Micro-Controller
+\\
+\textbf{PAC}\>Peripheral Access Crate
+\\
+\textbf{HAL}\>Hardware Abstraction Layer
+\\
+\textbf{SVD}\>System View Description
+\\
+\textbf{VA}\>Voice Assistant
 \end{tabbing}
 \cleardoublepage
 
